Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
Description
In some cases error avoids to let RocksDB start.
In this cases the only options is to restore a full backup , even if
the error is not critical like
[ERROR] RocksDB: Could not get index information for Index Number, (x,x) , table tablename
[ERROR] RocksDB: Failed to initialize DDL mananger
[ERROR] Plugin 'ROCKSDBĂ„ init function returned error.
So in some cases there should be a possibility to skip the error.
Suggestion:
Add variable
rocksdb_ignore_error
Simple Version wood be a boolean, maybe it makes also sense to create a ENUM for different error types.
Certainly default should be 0 or 'NONE'
Attachments
1.
|
Create a test case for MDEV-27149 |
|
Closed | Sergei Petrunia |
|